# fantatech

./: .gitignore  CMakeLists.txt  README.md  ftbase.cc  ftbase.hh  ftconv.cc  ftformat.cc  ftformat.hh  ftgame.cc  ftgame.hh
misc/: openscene.cc  torture.py
misc/patterns/: bp3.hexpat  idx_bin.hexpat  idx_lb5.hexpat
misc/patterns/1997/: bp2.hexpat  zdf.hexpat
